Исправление чата